--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
     <meta name="twitter:image" content="http://localhost:3002/banner.webp">
     <link rel="icon" href="/favicon.webp" />
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="margin:0">
+    <div id="app">
+      <!-- Initial loading UI -->
+      <!-- These DOM nodes will be overwritten on Vue app mount -->
+      <div style="background:#09090e;color:white;width:100%;height:100vh">
+        <header style="position:sticky;width:100%;height:64px">
+          lol
+        </header>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
