--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <meta name="twitter:image" content="http://localhost:3002/banner.webp">
     <link rel="icon" href="/favicon.webp" />
   </head>
-  <body style="margin:0">
+  <body style="margin:0;background:#09090e;color:white">
     <div id="app">
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
-      <div style="background:#09090e;color:white;width:100%;height:100vh">
-        <header style="position:sticky;width:100%;height:64px">
+      <div style="width:100%;height:100vh">
+        <header style="position:sticky;width:100%;height:80px">
           lol
         </header>
       </div>
