--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
-        <header style="position:sticky;width:100%;height:80px">
-          lol
+        <header style="position:sticky;top:0;width:100%;height:80px;border-bottom:1px solid #181825">
+          <div style="max-width:1280px;margin:auto;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center">
+            <div></div>
+            <div style="display:flex;gap:16px;align-items:center">
+              <p style="font-weight:600">Home</p>
+              <p style="font-weight:600">Downloads</p>
+              <p style="font-weight:600">FAQ</p>
+              <p style="font-weight:600">About</p>
+              <p style="font-weight:600;padding-right:8px">Theme</p>
+              <div style="width:2px;height:32px;background:#cba6f7"></div>
+              <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
+              <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
+              <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
+            </div>
+          </div>
         </header>
       </div>
     </div>
