--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <meta name="twitter:image" content="http://localhost:3002/banner.webp">
     <link rel="icon" href="/favicon.webp" />
   </head>
-  <body style="margin:0;background:#09090e;color:white">
+  <body style="margin:0;background:#09090e;color:white;overflow-x:hidden">
     <div id="app">
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
-        <header style="position:sticky;top:0;width:100%;height:80px;border-bottom:1px solid #181825">
-          <div style="max-width:1280px;margin:auto;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center">
+        <header style="position:sticky;top:0;width:100%;height:80px;border-bottom:1px solid #181825;display:flex;justify-content:center">
+          <div style="max-width:1280px;margin-left:16px;margin-right:16px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center">
             <div></div>
             <div style="display:flex;gap:16px;align-items:center">
               <p style="font-weight:600">Home</p>
