--- a/index.html
+++ b/index.html
@@ -20,21 +20,36 @@
     <meta name="twitter:description" content="A Prism Launcher fork aimed to provide a free way to play Minecraft.">
     <meta name="twitter:image" content="http://localhost:3002/banner.webp">
     <link rel="icon" href="/favicon.webp" />
+    <style>
+      /* Initial UI styles */
+      @media (width < 640px) {
+        #__initial-header {
+          display: none !important;
+        }
+      }
+      @media (width < 768px) {
+        #__initial-header-row {
+          gap: 8px !important;
+        }
+      }
+    </style>
   </head>
   <body style="margin:0;background:#09090e;color:white;overflow-x:hidden">
     <div id="app">
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
-        <header style="position:sticky;top:0;width:100%;height:80px;border-bottom:1px solid #181825;display:flex;justify-content:center">
+        <header id="__initial-header" style="position:sticky;top:0;width:100%;height:80px;border-bottom:1px solid #181825;display:flex;justify-content:center">
           <div style="max-width:1280px;margin-left:16px;margin-right:16px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center">
             <div></div>
-            <div style="display:flex;gap:16px;align-items:center">
-              <p style="font-weight:600">Home</p>
-              <p style="font-weight:600">Downloads</p>
-              <p style="font-weight:600">FAQ</p>
-              <p style="font-weight:600">About</p>
-              <p style="font-weight:600;padding-right:8px">Theme</p>
+            <div id="__initial-header-row" style="display:flex;gap:16px;align-items:center">
+              <div style="display:flex;gap:16px">
+                <p style="font-weight:600">Home</p>
+                <p style="font-weight:600">Downloads</p>
+                <p style="font-weight:600">FAQ</p>
+                <p style="font-weight:600">About</p>
+                <p style="font-weight:600;padding-right:8px">Theme</p>
+              </div>
               <div style="width:2px;height:32px;background:#cba6f7"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
