--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         #__initial-header-row {
           gap: 8px !important;
         }
+        #__initial-header-nav {
+          gap: 8px !important;
+        }
       }
     </style>
   </head>
@@ -43,7 +46,7 @@
           <div style="max-width:1280px;margin-left:16px;margin-right:16px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center">
             <div></div>
             <div id="__initial-header-row" style="display:flex;gap:16px;align-items:center">
-              <div style="display:flex;gap:16px">
+              <div id="__initial-header-nav" style="display:flex;gap:16px">
                 <p style="font-weight:600">Home</p>
                 <p style="font-weight:600">Downloads</p>
                 <p style="font-weight:600">FAQ</p>
