--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
     </style>
   </head>
-  <body style="margin:0;background:#09090e;color:white;overflow-x:hidden">
+  <body style="margin:0;background:#09090e;color:white">
     <div id="app">
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
