--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         #__initial-header {
           display: none !important;
         }
+        #__initial-bottom-bar {
+          display: flex !important;
+        }
       }
       @media (width < 768px) {
         #__initial-header-row {
@@ -34,11 +37,14 @@
         #__initial-header-nav {
           gap: 8px !important;
         }
+        #__initial-header-nav__last-item {
+          padding-right: 4px !important;
+        }
       }
     </style>
   </head>
   <body style="margin:0;background:#09090e;color:white">
-    <div id="app">
+    <div id="dapp">
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
@@ -51,7 +57,7 @@
                 <p style="font-weight:600">Downloads</p>
                 <p style="font-weight:600">FAQ</p>
                 <p style="font-weight:600">About</p>
-                <p style="font-weight:600;padding-right:8px">Theme</p>
+                <p id="__initial-header-nav__last-item" style="font-weight:600;padding-right:8px">Themes</p>
               </div>
               <div style="width:2px;height:32px;background:#cba6f7"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
@@ -60,6 +66,32 @@
             </div>
           </div>
         </header>
+        <div id="__initial-bottom-bar" style="position:absolute;bottom:0;width:100%;height:80px;border-top:1px solid #1e1e2e;background:#11111b;display:none;flex-wrap:nowrap;overflow-x:auto">
+          <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
+            <div style="width:32px;height:32px"></div>
+            <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">Home</p>
+          </div>
+          <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
+            <div style="width:32px;height:32px"></div>
+            <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">Downloads</p>
+          </div>
+          <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
+            <div style="width:32px;height:32px"></div>
+            <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">FAQ</p>
+          </div>
+          <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
+            <div style="width:32px;height:32px"></div>
+            <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">About</p>
+          </div>
+          <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
+            <div style="width:32px;height:32px"></div>
+            <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">Themes</p>
+          </div>
+          <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
+            <div style="width:32px;height:32px"></div>
+            <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">Locale</p>
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
