--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body style="margin:0;background:#09090e;color:white">
-    <div id="dapp">
+    <div id="app">
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
