--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:title" content="Freesm Launcher">
     <meta name="twitter:description" content="A Prism Launcher fork aimed to provide a free way to play Minecraft.">
     <meta name="twitter:image" content="http://localhost:3002/banner.webp">
-    <link rel="icon" href="/favicon.webp" />
+    <link rel="icon" href="/favicon.ico" />
     <style>
       /* Initial UI styles */
       @media (width < 640px) {
