--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
         }
       }
     </style>
+    <script>
+      /* Per-route metadata */
+      switch (location?.pathname) {
+        case "/downloads": {
+          document.title = "Downloads - Freesm Launcher";
+          document
+            .querySelector('meta[name="description"]')
+            .setAttribute(
+              "content",
+              "Download Freesm Launcher for your platform for free, no ads, no viruses, no SMS, no registration, no calls, no glowies. Or don't do it, it's up to you!",
+            );
+          break;
+        }
+        case "/faq": {
+          document.title = "FAQ - Freesm Launcher";
+          document
+            .querySelector('meta[name="description"]')
+            .setAttribute(
+              "content",
+              "A collection of helpful information for frequent problems when using Freesm Launcher.",
+            );
+          break;
+        }
+        case "/themes": {
+          document.title = "Themes - Freesm Launcher";
+          document
+            .querySelector('meta[name="description"]')
+            .setAttribute(
+              "content",
+              "Easily create and preview your Freesm Launcher theme in real-time.",
+            );
+          break;
+        }
+      }
+    </script>
   </head>
   <body style="margin:0;background:#09090e;color:white">
     <div id="app" class="select-none">
