feat: improve seo

--- a/index.html
+++ b/index.html
@@ -46,33 +46,81 @@
       /* Per-route metadata */
       switch (location?.pathname) {
         case "/downloads": {
-          document.title = "Downloads - Freesm Launcher";
+          const title = "Downloads - Freesm Launcher";
+          const description = "Download Freesm Launcher for your platform for free, no ads, no viruses, no SMS, no registration, no calls, no glowies. Or don't do it, it's up to you!";
+
+          document.title = title;
           document
-            .querySelector('meta[name="description"]')
-            .setAttribute(
+            ?.querySelector?.('meta[name="description"]')
+            ?.setAttribute?.(
               "content",
-              "Download Freesm Launcher for your platform for free, no ads, no viruses, no SMS, no registration, no calls, no glowies. Or don't do it, it's up to you!",
+              description,
             );
+          document
+            ?.querySelector?.('meta[name="og:description"]')
+            ?.setAttribute?.(
+              "content",
+              description,
+            );
+          document
+            ?.querySelector?.('meta[name="twitter:description"]')
+            ?.setAttribute?.(
+              "content",
+              description,
+            );
+
           break;
         }
         case "/faq": {
-          document.title = "FAQ - Freesm Launcher";
+          const title = "FAQ - Freesm Launcher";
+          const description = "A collection of helpful information for frequent problems when using Freesm Launcher.";
+
+          document.title = title;
           document
-            .querySelector('meta[name="description"]')
-            .setAttribute(
-              "content",
-              "A collection of helpful information for frequent problems when using Freesm Launcher.",
-            );
+            ?.querySelector?.('meta[name="description"]')
+            ?.setAttribute?.(
+            "content",
+            description,
+          );
+          document
+            ?.querySelector?.('meta[name="og:description"]')
+            ?.setAttribute?.(
+            "content",
+            description,
+          );
+          document
+            ?.querySelector?.('meta[name="twitter:description"]')
+            ?.setAttribute?.(
+            "content",
+            description,
+          );
+
           break;
         }
         case "/themes": {
-          document.title = "Themes - Freesm Launcher";
+          const title = "Themes - Freesm Launcher";
+          const description = "Easily create and preview your Freesm Launcher theme in real-time.";
+
+          document.title = title;
           document
-            .querySelector('meta[name="description"]')
-            .setAttribute(
-              "content",
-              "Easily create and preview your Freesm Launcher theme in real-time.",
-            );
+            ?.querySelector?.('meta[name="description"]')
+            ?.setAttribute?.(
+            "content",
+            description,
+          );
+          document
+            ?.querySelector?.('meta[name="og:description"]')
+            ?.setAttribute?.(
+            "content",
+            description,
+          );
+          document
+            ?.querySelector?.('meta[name="twitter:description"]')
+            ?.setAttribute?.(
+            "content",
+            description,
+          );
+
           break;
         }
       }
