fix: fix not working opengraph metadata

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               description,
             );
           document
-            ?.querySelector?.('meta[name="og:description"]')
+            ?.querySelector?.('meta[property="og:description"]')
             ?.setAttribute?.(
               "content",
               description,
@@ -83,7 +83,7 @@
             description,
           );
           document
-            ?.querySelector?.('meta[name="og:description"]')
+            ?.querySelector?.('meta[property="og:description"]')
             ?.setAttribute?.(
             "content",
             description,
@@ -109,7 +109,7 @@
             description,
           );
           document
-            ?.querySelector?.('meta[name="og:description"]')
+            ?.querySelector?.('meta[property="og:description"]')
             ?.setAttribute?.(
             "content",
             description,
