--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Freesm Launcher">
     <meta name="twitter:description" content="A Prism Launcher fork aimed to provide a free way to play Minecraft.">
-    <meta name="twitter:image" content="http://localhost:3002/banner.webp">
+    <meta name="twitter:image" content="/banner.webp">
     <link rel="icon" href="/favicon.ico" />
     <style>
       /* Initial UI styles */
@@ -131,8 +131,8 @@
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
-        <header id="__initial-header" style="position:sticky;top:0;width:100%;height:80px;border-bottom:1px solid #181825;display:flex;justify-content:center">
-          <div style="max-width:1280px;margin-left:16px;margin-right:16px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center">
+        <header id="__initial-header" style="position:sticky;top:0;width:100%;height:80px;display:flex;justify-content:center;scrollbar-gutter:stable both-edges;overflow-y:auto">
+          <div style="max-width:1280px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center;border-bottom-left-radius:8px;border-bottom-right-radius:8px;background:#11111b">
             <div></div>
             <div id="__initial-header-row" style="display:flex;gap:16px;align-items:center">
               <div id="__initial-header-nav" style="display:flex;gap:16px">
@@ -144,11 +144,11 @@
               <div style="width:2px;height:32px;background:#cba6f7"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
-              <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
+              <div style="width:32px;height:32px;background:#11111b;border-radius:100%;margin-right:16px"></div>
             </div>
           </div>
         </header>
-        <div id="__initial-bottom-bar" style="position:absolute;bottom:0;width:100%;height:80px;border-top:1px solid #1e1e2e;background:#11111b;display:none;flex-wrap:nowrap;overflow-x:auto">
+        <div id="__initial-bottom-bar" style="position:absolute;bottom:0;width:100%;height:80px;background:#11111b;display:none;flex-wrap:nowrap;overflow-x:auto">
           <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
             <div style="width:32px;height:32px"></div>
             <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">Home</p>
