--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <!-- Initial loading UI -->
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
-        <header id="__initial-header" style="position:sticky;top:0;width:100%;height:80px;display:flex;justify-content:center;scrollbar-gutter:stable both-edges;overflow-y:auto">
+        <header id="__initial-header" style="position:sticky;top:0;width:100%;height:80px;display:flex;justify-content:center">
           <div style="max-width:1280px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center;border-bottom-left-radius:8px;border-bottom-right-radius:8px;background:#11111b">
             <div></div>
             <div id="__initial-header-row" style="display:flex;gap:16px;align-items:center">
