--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <!-- These DOM nodes will be overwritten on Vue app mount -->
       <div style="width:100%;height:100vh">
         <header id="__initial-header" style="position:sticky;top:0;width:100%;height:80px;display:flex;justify-content:center">
-          <div style="max-width:1280px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center;border-bottom-left-radius:8px;border-bottom-right-radius:8px;background:#11111b">
+          <div style="max-width:1280px;width:100%;height:100%;display:flex;justify-content:space-between;align-items:center;border-bottom-left-radius:8px;border-bottom-right-radius:8px;background:#0c0c14">
             <div></div>
             <div id="__initial-header-row" style="display:flex;gap:16px;align-items:center">
               <div id="__initial-header-nav" style="display:flex;gap:16px">
@@ -148,7 +148,7 @@
             </div>
           </div>
         </header>
-        <div id="__initial-bottom-bar" style="position:absolute;bottom:0;width:100%;height:80px;background:#11111b;display:none;flex-wrap:nowrap;overflow-x:auto">
+        <div id="__initial-bottom-bar" style="position:absolute;bottom:0;width:100%;height:80px;background:#0c0c14;display:none;flex-wrap:nowrap;overflow-x:auto">
           <div style="min-width:80px;display:flex;flex-direction:column;gap:8px;justify-content:center;align-items:center;flex:1 0 0">
             <div style="width:32px;height:32px"></div>
             <p style="padding-bottom:4px;text-align:center;font-size:14px;line-height:1;color:#ffffffb3">Home</p>
