feat: implement an accent animation toggle button

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
               <div style="width:2px;height:32px;background:#cba6f7"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
+              <div style="width:32px;height:32px;background:#11111b;border-radius:100%"></div>
               <div style="width:32px;height:32px;background:#11111b;border-radius:100%;margin-right:16px"></div>
             </div>
           </div>
