--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
           return;
         }
 
+        console.log(parsed);
+
         // A shallow check that translations are valid
         if (parsed?.Messages?.["routes.home.name"] === undefined) {
           return;
