--- a/index.html
+++ b/index.html
@@ -143,8 +143,6 @@
           return;
         }
 
-        console.log(parsed);
-
         // A shallow check that translations are valid
         if (parsed?.Messages?.["routes.home.name"] === undefined) {
           return;
@@ -154,6 +152,10 @@
         if (!document.getElementById("__initial-header-nav__home-text")) {
           return;
         }
+
+        console.log("mmm yeah");
+
+        return;
 
         const homeTitle = parsed?.Messages?.["routes.home.name"];
         const downloadsTitle = parsed?.Messages?.["routes.downloads.name"];
