--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           return;
         }
 
-        console.log("mmm huh);
+        console.log("mmm huh");
 
         // A shallow check that translations are valid
         if (parsed?.Messages?.["routes.home.name"] === undefined) {
