--- a/index.html
+++ b/index.html
@@ -143,23 +143,15 @@
           return;
         }
 
-        console.log("mmm huh");
-
         // A shallow check that translations are valid
         if (parsed?.Messages?.["routes.home.name"] === undefined) {
           return;
         }
 
-        console.log("mmm not yeah", document.getElementById("__initial-header-nav__home-text"));
-
         // In case if something wrong
         if (!document.getElementById("__initial-header-nav__home-text")) {
           return;
         }
-
-        console.log("mmm yeah");
-
-        return;
 
         const homeTitle = parsed?.Messages?.["routes.home.name"];
         const downloadsTitle = parsed?.Messages?.["routes.downloads.name"];
@@ -179,7 +171,7 @@
         document.getElementById("__initial-bottom-bar__other-text").textContent = otherTitle;
       };
 
-      translateInitialText();
+      addEventListener("DOMContentLoaded", translateInitialText);
     </script>
   </head>
   <body style="margin:0;background:#09090e;color:white">
